#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package NeoCaptar
#------------------------------------------------------------------------

Package author: Igor Gaponenko

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-02
2015-02-02 Igor Gaponenko
- updated database schema by reinforcing the cable number allocator
in order to prevent allocating the same cable number for more than
one cable (of a given project). See JIRA issue PSWA-30.

Tag: V00-03-01
2014-11-26 Igor Gaponenko
- fixed cable label generator and printer setting instructions
due to changed geometry of the label roll as per JIRA issue PSWA-26

Tag: V00-03-00
2014-04-30 Igor Gaponenko
- moved javascript libraries to package webfwk/

Tag: V00-02-05
2014-03-17 Igor Gaponenko
- allowed connector name length to be 8 characters instead of 7

Tag: V00-02-04
2013-11-01 Igor Gaponenko
- reporting errno in the MySQL connecton class

Tag: V00-02-03
2013-08-23 Igor Gaponenko
- allowed prefixes of 3 symbols

Tag: V00-02-02
2012-12-10 Igor Gaponenko
- Table.js migration
- table configuration saving on the server
- bug fixes

Tag: V00-02-01
2012-10-12 Igor Gaponenko
- Migrated the following Web services to use the new PHP framework:
project_security.php, dict_pinlist_get.php, project_search.php, access_get.php, cable_history.php


Tag: V00-02-00
2012-10-08 Igor Gaponenko
- major code re-organization to separate Web services, JavaScript code and CSS
into dedicated subdirectories

Tag: V00-01-04
2012-07-20 Igor Gaponenko
- a lot of new functionality added

Tag: V00-01-03
2012-07-13 Igor Gaponenko
- extended a dictionary of pinlists by adding an optional association with cable type,
and connectors at both ends
- fixed a bug in the schema for device_region to allow up to 4 characters (it was 3)